--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
     <div class="col-xs-6 col-sm-12">
       <div class="panel panel-default">
         <div class="panel-body">
-          <div id="hotels-selection">
+          <div id="hotel-selection">
             <h4>Hotels</h4>
             <select>
               {% for hotel in all_hotels %}
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="panel-body">
-          <div id="hotels-list">
+          <div id="hotel-list">
             <h4>My Hotel</h4>
             <ul class="list-group">
             </ul>
